--- a/Backend/VED_AI.ipynb
+++ b/Backend/VED_AI.ipynb
@@ -2,65 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "OCR Result: [[[ 3.4877636 -3.1968932]\n",
-      "  [ 3.5155587 -3.2959235]\n",
-      "  [ 3.4266248 -3.4069686]\n",
-      "  ...\n",
-      "  [ 3.6881094 -3.454536 ]\n",
-      "  [ 3.4119637 -3.9013171]\n",
-      "  [ 3.8877578 -3.2582037]]\n",
-      "\n",
-      " [[ 4.502776  -2.2526045]\n",
-      "  [ 3.4831135 -3.2970302]\n",
-      "  [ 3.495217  -3.3196104]\n",
-      "  ...\n",
-      "  [ 3.5560877 -3.479062 ]\n",
-      "  [ 3.3596065 -3.7368855]\n",
-      "  [ 3.9900072 -3.2295575]]\n",
-      "\n",
-      " [[ 4.8983655 -1.946895 ]\n",
-      "  [ 3.79108   -3.052875 ]\n",
-      "  [ 3.7515838 -3.24178  ]\n",
-      "  ...\n",
-      "  [ 3.6105487 -3.5052547]\n",
-      "  [ 3.438598  -3.675847 ]\n",
-      "  [ 4.0371118 -3.236331 ]]\n",
-      "\n",
-      " ...\n",
-      "\n",
-      " [[ 3.9914985 -3.1603901]\n",
-      "  [ 2.9506505 -4.081049 ]\n",
-      "  [ 2.9842846 -4.0578337]\n",
-      "  ...\n",
-      "  [ 3.2872386 -4.399028 ]\n",
-      "  [ 3.1433046 -4.3848515]\n",
-      "  [ 3.7337627 -3.9703338]]\n",
-      "\n",
-      " [[ 3.4679098 -3.4335785]\n",
-      "  [ 2.517486  -4.4029865]\n",
-      "  [ 2.6565177 -4.1537814]\n",
-      "  ...\n",
-      "  [ 3.0605266 -4.485979 ]\n",
-      "  [ 2.8990204 -4.504045 ]\n",
-      "  [ 3.506343  -3.9438052]]\n",
-      "\n",
-      " [[ 3.0950177 -3.971089 ]\n",
-      "  [ 3.1020882 -3.8152745]\n",
-      "  [ 3.1262665 -3.8207896]\n",
-      "  ...\n",
-      "  [ 3.5082166 -4.181337 ]\n",
-      "  [ 3.3601437 -4.1734743]\n",
-      "  [ 3.0327394 -4.0483737]]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "from openvino.runtime import Core\n",
@@ -150,31 +94,24 @@
     "    else:\n",
     "        print(\"Failed to capture the document\")\n",
     "        return None\n",
-    "\n"
+    "    \n",
+    "captured_image_path = live_scan_document()\n",
+    "if captured_image_path:\n",
+    "    preprocessed_frame = preprocess_image(captured_image_path)\n",
+    "    if preprocessed_frame is not None:\n",
+    "        ocr_result = perform_ocr(preprocessed_frame)\n",
+    "        print(\"OCR Result:\", ocr_result)\n",
+    "    else:\n",
+    "        print(\"Preprocessing failed.\")\n",
+    "else:\n",
+    "    print(\"Image capture failed.\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Intel(R) Extension for Scikit-learn* enabled (https://github.com/intel/scikit-learn-intelex)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Failed to load image from captured_images\\captured_frame.png\n",
-      "Predicted Specialist: Pulmonologist\n",
-      "Recommended Specialist: Pulmonologist\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import os\n",
@@ -280,8 +217,8 @@
     "\n",
     "# Example usage\n",
     "# Set up directories for captured and preprocessed images\n",
-    "captured_image_folder = \"captured_images\"  # Folder where captured images are stored\n",
-    "preprocessed_image_folder = \"preprocessed_images\"  # Folder for preprocessed images\n",
+    "captured_image_folder = \"captured_frames\"  # Folder where captured images are stored\n",
+    "preprocessed_image_folder = \"preprocessed_frames\"  # Folder for preprocessed images\n",
     "\n",
     "# Ensure folders exist\n",
     "os.makedirs(captured_image_folder, exist_ok=True)\n",
@@ -303,36 +240,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hospitals within 25 km of your location:\n",
-      "- Indraprastha Apollo Hospital (NCR), Rating: N/A, Distance: 8.54 km\n",
-      "- Fortis Escorts Heart Institute (NCR), Rating: N/A, Distance: 5.07 km\n",
-      "- Max Super Speciality Hospital, Saket (NCR), Rating: N/A, Distance: 9.4 km\n",
-      "- Sir Ganga Ram Hospital (NCR), Rating: N/A, Distance: 5.22 km\n",
-      "- BLK-Max Super Speciality Hospital (NCR), Rating: N/A, Distance: 5.14 km\n",
-      "- Manipal Hospitals, Dwarka (NCR), Rating: N/A, Distance: 17.85 km\n",
-      "- Sri Balaji Action Medical Institute (NCR), Rating: N/A, Distance: 13.47 km\n",
-      "- Guru Gobind Singh Government Hospital (NCR), Rating: N/A, Distance: 12.8 km\n",
-      "- Kukreja Hospital (NCR), Rating: N/A, Distance: 12.01 km\n",
-      "- AIIMS (All India Institute of Medical Sciences) (NCR), Rating: N/A, Distance: 5.42 km\n",
-      "- Artemis Hospital (NCR), Rating: N/A, Distance: 22.95 km\n",
-      "- Max Hospital, Gurgaon (NCR), Rating: N/A, Distance: 22.95 km\n",
-      "- Columbia Asia Hospital (NCR), Rating: N/A, Distance: 22.95 km\n",
-      "- Paras Hospitals (NCR), Rating: N/A, Distance: 22.95 km\n",
-      "- Fortis Hospital, Noida (NCR), Rating: N/A, Distance: 17.98 km\n",
-      "- Jaypee Hospital (NCR), Rating: N/A, Distance: 17.98 km\n",
-      "- Kailash Hospital (NCR), Rating: N/A, Distance: 17.98 km\n",
-      "- Yatharth Super Speciality Hospital (NCR), Rating: N/A, Distance: 17.98 km\n",
-      "- Sharda Hospital (NCR), Rating: N/A, Distance: 17.98 km\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import json\n",
@@ -394,18 +304,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "captured_image_path = live_scan_document()\n",
-    "if captured_image_path:\n",
-    "    preprocessed_frame = preprocess_image(captured_image_path)\n",
-    "    if preprocessed_frame is not None:\n",
-    "        ocr_result = perform_ocr(preprocessed_frame)\n",
-    "        print(\"OCR Result:\", ocr_result)\n",
-    "    else:\n",
-    "        print(\"Preprocessing failed.\")\n",
-    "else:\n",
-    "    print(\"Image capture failed.\")\n",
-    "\n",
-    "    \n",
     "specialist = predict_condition_and_find_specialist(medical_condition) # Specialist recommendation based on condition of the patient\n",
     "print(f\"Recommended Specialist: {specialist}\")\n",
     "\n",
@@ -430,7 +328,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
